--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "parcel build index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  
   "author": "Ankit kamboj",
   "license": "ISC",
   "devDependencies": {
@@ -14,6 +15,7 @@
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "@parcel/transformer-sass": "^2.8.3",
+    "gh-pages": "^5.0.0",
     "parcel": "^2.8.3",
     "process": "^0.11.10"
   },
