--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "parcel build index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  
+  "homepage": "https://github.com/ankitkamboj0/react-counter/",
   "author": "Ankit kamboj",
   "license": "ISC",
   "devDependencies": {
