--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "react-counter",
   "version": "1.0.0",
   "description": "This is the counter",
+  "homepage": "https://ankitkamboj0.github.io/react-counter/",
   "scripts": {
     "start": "parcel index.html",
-    "build": "parcel build index.html",
+    "build": "parcel build src/index.html --public-url",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "homepage": "https://github.com/ankitkamboj0/react-counter/",
   "author": "Ankit kamboj",
   "license": "ISC",
   "devDependencies": {
